@@ -102,7 +102,7 @@ class LoggingChannelFactoryTest extends UnitTest {
             final boolean testStackTrace) {
         assertEquals(1, appender.list.size());
 
-        final ILoggingEvent loggingEvent = appender.list.get(0);
+        final ILoggingEvent loggingEvent = appender.list.getFirst();
 
         assertEquals(message, loggingEvent.getFormattedMessage());
 
